--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.3",
     "iconsax-react": "^0.0.8",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8"
   },
