--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "iconsax-react": "^0.0.8",
     "next": "14.1.4",
     "react": "^18",
